src/app/dashboard/widgets/change-shift/shift-person/shift-person.component.scss
%circle {
  width: 4px;
  height: 4px;
  border: 0.5px solid var(--color-border-main-transparrent);
  background-color: black;
  border-radius: 50%;
  position: absolute;
  top: 100%;
  box-sizing: border-box;
}

:host {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
}

.onShift__person {
  width: 130px;
  height: 70px;
  margin-top: 20px;
  display: inline-flex;
  position: relative;
  border-top: 0.5px dashed var(--color-border-main-transparrent);
  font-size: 7px;
  box-sizing: border-box;
  padding-top: 5px;
  margin: 0 7px 20px;

  .person {
    display: flex;
    &__avatar {
      flex-basis: 40%;
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: left;
      box-sizing: border-box;
      position: relative;

      &:before {
        z-index: 1;
        content: "";
        position: absolute;

        bottom: -2px;
        right: 0px;

        height: 2px;
        width: 13px;

        box-sizing: border-box;
        background: var(--color-bg-main);
      }
    }

    &__img {
      width: 50px;
      height: 50px;
      border-radius: 50%;
      // background: url('../../../../../assets/pic/avatar_temp.jpg');
      background-color: var(--color-bg-active); //temp
    }

    &__info {
      flex-basis: 60%;
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
    }

    &__name {
      color: var(--color-text-main);
      font-size: 9px;
    }

    &__position {
      color: var(--color-text-sub);
    }

    &__place {
      color: var(--color-text-sub-heading);
    }

    &__status {
      display: inline-flex;
      justify-content: space-between;
      box-sizing: border-box;
      padding-top: 3px;
      border-top: 0.5px dashed var(--color-border-main-transparrent);
      position: relative;

      &:before {
        z-index: 1;
        content: "";
        position: absolute;

        top: 7px;
        left: -18px;

        height: 1px;
        width: 20px;

        box-sizing: border-box;
        transform-origin: 43% 0;
        transform: rotate(-40deg);

        border-bottom: 0.5px dashed var(--color-border-main-transparrent);
        background: transparent;
      }

      .status {
        &__name {
          color: var(--color-text-main);
        }
        &__icon {
          width: 10px;
          height: 10px;
          border-radius: 50%;
          background-color: var(--color-bg-active); //temp
        }
      }
    }
  }
}

.isOnShift {
  .person {
    &__avatar {
      border-bottom: 0.5px dashed var(--color-border-main-transparrent);
    }
    &__info {
      justify-content: space-between;
    }
  }

  &:hover {
    cursor: pointer;
  }
}

.allPeople {
  border-bottom: 0.5px dashed var(--color-border-main-transparrent);
  .person {
    &__info {
      justify-content: space-around;
    }
  }

  &:hover {
    cursor: pointer;
  }
}

.dropdown {
  position: absolute;
  width: 100px;
  height: 50px;
  background: var(--color-bg-main);
  z-index: 1;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;

  top: 70px;
  right: 0px;

  &__item {
    border: 0.5px dashed var(--color-border-main-transparrent);
    border-top: none;
    flex: 1;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    &:hover {
      cursor: pointer;
      background: var(--color-bg-active);
    }
  }
}

.disable {
  display: none;
}

